--- a/start/css/HTMLObjectsContainer.css
+++ b/start/css/HTMLObjectsContainer.css
@@ -83,11 +83,29 @@
 }
 .coverText
 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+    justify-content: center;
+    flex-direction: column;
     font-family:微軟正黑體,sans-serif;
     color:navajowhite;
-    font-size: 1.5;
-    position: relative;
+    font-size: 1em;
     background-color: black;
+}
+.coverText *
+{
+    text-align: center;
+}
+.coverText .head
+{
+    font-size: 1.5em;
+}
+.coverText .content
+{
+
+    
 }
 /*選項*/
 
