--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,10 @@ body
     transition:all 0.5s;
     cursor: default;
 }
-
+.webLinks[data-used='true']
+{
+    opacity: 0.6;
+}
 .webLinks:hover,.webLinks > img:hover
 {
     transform: scale(1.5);
